Fixed HUNO-384: Patient name is too long, unable to view the apt status change column in the admin dashboard.

--- a/src/admin/assets/css/style.css
+++ b/src/admin/assets/css/style.css
@@ -5171,19 +5171,3 @@ table.table-inbox tbody tr.checked {
 	font-size: 18px;
     font-weight: 300;
   }
-  .wrapper1, .table-responsive{
-	overflow-x: scroll; 
-	overflow-y:hidden;
-  }
-  .wrapper1{
-	 height: 20px; 
-   }
-   .table-responsive{
-	}
-   .div1 {
-	  width:2000px; height: 20px; 
-	}
-   .div2 {
-	  width:2000px; 
-	  overflow: auto;
-   }
